Error Prone suggests not using LinkedList where an ArrayList or ArrayDeque could be used